<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_num1"
        android:layout_width="314dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/xml_txt_num1"
        android:inputType="number"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_num2"
        android:layout_width="314dp"
        android:layout_height="59dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/xml_txt_num2"
        android:inputType="number"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num1" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="311dp"
        android:layout_height="133dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num2">

        <RadioButton
            android:id="@+id/rb_suma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xml_rb_suma"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_resta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xml_rb_resta"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_mult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xml_rb_multi"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xml_rb_divi"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="Operaciones"
        android:text="@string/xml_btn_cal"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/tv_resul"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:text="@string/xml_tv_resul"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.295" />

</androidx.constraintlayout.widget.ConstraintLayout>